[package]
name = "rust-adventure"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9"
flate2 = "1.0"
serde = "1.0"
serde_json = "1.0"
trybuild = "1.0"
