[package]
name = "rust-adventure"
version = "0.1.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Learn how to use lifetimes in rust by doing."
repository = "https://github.com/DevinR528/rust-adventure"
edition = "2018"
readme = "README.md"


[dependencies]
console = "0.9"
flate2 = "1.0"
serde = "1.0"
serde_json = "1.0"
trybuild = "1.0"
termimage = "0.5"
image="0.22"
